# nexus.ws.rust

./: Cargo.toml  README.md
libs/acctg_provider/: Cargo.toml
libs/acctg_provider/src/: accounts.rs  invoice.rs
libs/acctg_provider_postgres/: Cargo.toml
libs/acctg_provider_postgres/src/: accounts.rs  invoice.rs
libs/admin_tenants/: Cargo.toml
libs/admin_tenants/src/: lib.rs  tenant.rs  tenants.rs  users.rs
libs/admin_tenants_postgres/: Cargo.toml
libs/admin_tenants_postgres/src/: lib.rs  tenants.rs  users.rs
libs/auth_provider/: Cargo.toml
libs/auth_provider/src/: lib.rs
libs/auth_provider_postgres/: Cargo.toml
libs/auth_provider_postgres/src/: lib.rs
libs/commons_provider/: Cargo.toml
libs/commons_provider/src/: lib.rs
libs/commons_provider_postgres/: Cargo.toml
libs/commons_provider_postgres/src/: lib.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/crm_provider/: Cargo.toml
libs/crm_provider/src/: lib.rs
libs/crm_provider_postgres/: Cargo.toml
libs/crm_provider_postgres/src/: lib.rs
libs/database_provider/: Cargo.toml
libs/database_provider/src/: lib.rs
libs/db_provider/: Cargo.toml
libs/file_provider/: Cargo.toml
libs/file_provider/src/: lib.rs
libs/file_provider_postgres/: Cargo.toml
libs/file_provider_postgres/src/: lib.rs
libs/file_store/: Cargo.toml
libs/file_store_local/: Cargo.toml
libs/inv_provider/: Cargo.toml
libs/inv_provider/src/: lib.rs
libs/inv_provider_postgres/: Cargo.toml
libs/inv_provider_postgres/src/: item.rs  lib.rs  warehouse.rs
libs/jwt/: Cargo.toml
libs/mailer/: Cargo.toml
libs/mailer/src/: lib.rs
libs/permissions_provider/: Cargo.toml
libs/permissions_provider/src/: lib.rs
libs/permissions_provider_postgres/: Cargo.toml
libs/permissions_provider_postgres/src/: lib.rs
libs/providers/organizations_provider/: Cargo.toml
libs/providers/organizations_provider/src/: lib.rs
libs/providers/organizations_provider_postgres/: Cargo.toml
libs/providers/organizations_provider_postgres/src/: lib.rs
libs/roles_provider/: Cargo.toml
libs/roles_provider/src/: lib.rs
libs/roles_provider_postgres/: Cargo.toml
libs/roles_provider_postgres/src/: lib.rs
libs/tenants_provider/: Cargo.toml
libs/tenants_provider/src/: lib.rs  organizations.rs
libs/tenants_provider_postgres/: Cargo.toml
libs/tenants_provider_postgres/src/: lib.rs  organizations.rs
libs/token/: Cargo.toml
libs/token/src/: lib.rs
libs/user_registration/: Cargo.toml
libs/user_registration/src/: lib.rs
libs/user_registration_postgres/: Cargo.toml
libs/user_registration_postgres/src/: lib.rs
libs/users_provider/: Cargo.toml
libs/users_provider/src/: lib.rs
libs/users_provider_postgres/: Cargo.toml
libs/users_provider_postgres/src/: lib.rs
tests/curl/: commons.curl  file_upload.curl
ws/: Cargo.toml
ws/src/: main.rs
ws/src/classes/: mod.rs  permission.rs  tenant.rs  user.rs
ws/src/endpoints/: common.rs  crm.rs  file.rs  mod.rs  organizations.rs  permissions.rs  session.rs
ws/src/endpoints/acctg/: accounts.rs  invoice.rs  mod.rs
ws/src/endpoints/admin/: mod.rs  tenants.rs  users.rs
ws/src/endpoints/inventory/: item.rs  mod.rs  warehouse.rs
ws/src/endpoints/user/: mod.rs  registration.rs  users.rs
ws/src/extractors/: user.rs
ws/src/guards/: permission.rs
ws/src/middleware/: auth.rs  cors.rs  mod.rs  permissions.rs
