[workspace]
resolver = "3"
members = [
    "libs/config",
    "libs/database_provider",
    "libs/jwt", 
    "libs/mailer",
    "libs/auth_provider",
    "libs/auth_provider_postgres",
    "libs/users_provider",
    "libs/users_provider_postgres",
    "libs/user_registration", 
    "libs/user_registration_postgres",
    "libs/admin_tenants",
    "libs/admin_tenants_postgres",
    "ws"
]
