[workspace]
resolver = "3"
members = [
    "libs/config",
    "libs/mailer",
    "libs/token",
    "libs/database_provider",
    "libs/commons_provider",
    "libs/commons_provider_postgres",
    "libs/auth_provider",
    "libs/auth_provider_postgres",
    "libs/tenants_provider",
    "libs/tenants_provider_postgres",
    "libs/roles_provider",
    "libs/roles_provider_postgres",
    "libs/users_provider",
    "libs/users_provider_postgres",
    "libs/user_registration", 
    "libs/user_registration_postgres",
    "libs/admin_tenants",
    "libs/admin_tenants_postgres",
    "ws"
]
