[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
tracing-subscriber = "*"

# env_logger = "*"

serde = { version="*", features=["derive"]}
serde_json = "*"
envy = "*"

uuid = "*"
openssl = "*"

actix-web = { version="4", features=["openssl"] }
actix-http = "*"

futures = "*"


# projects
config = { path = "../libs/config" }
database_provider = { path = "../libs/database_provider" }
user_registration = { path = "../libs/user_registration" }