[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
tracing-subscriber = "*"

# env_logger = "*"

serde = { version="*", features=["derive"]}
serde_json = "*"
envy = "*"

uuid = { version = "*", features = ["serde"] }
openssl = "*"
rand = "*"

actix-web = { version="4", features=["openssl"] }
actix-http = "*"

futures = "*"
regex = "*"


# projects
config = { path = "../libs/config" }
mailer = { path = "../libs/mailer" }
database_provider = { path = "../libs/database_provider" }

token = { path = "../libs/token" }

users_provider = { path = "../libs/users_provider" }
users_provider_postgres = { path = "../libs/users_provider_postgres" }

tenants_provider = { path = "../libs/tenants_provider" }
tenants_provider_postgres = { path = "../libs/tenants_provider_postgres" }

user_registration = { path = "../libs/user_registration" }
user_registration_postgres = { path = "../libs/user_registration_postgres" }

auth_provider = { path = "../libs/auth_provider" }
auth_provider_postgres = { path = "../libs/auth_provider_postgres" }

admin_tenants = { path = "../libs/admin_tenants" }
admin_tenants_postgres = { path = "../libs/admin_tenants_postgres" }



