[package]
name = "acctg_provider_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
sqlx = { version = "*", features = ["postgres", "uuid"] }
uuid = { version = "*", features = ["v4"] }
rust_decimal = { version = "*", features = ["serde"] }

# projects
database_provider = { path = "../database_provider" }
acctg_provider = { path = "../acctg_provider" }


[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }
