[package]
name = "acctg_provider_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
serde = "*"
sqlx = { version = "*", features = ["postgres", "uuid", "chrono", "macros", "rust_decimal"] }
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
rust_decimal = { version = "*", features = ["serde"] }

# projects
database_provider = { path = "../database_provider" }
acctg_provider = { path = "../acctg_provider" }


[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }
tenants_provider = { path = "../tenants_provider" }
tenants_provider_postgres = { path = "../tenants_provider_postgres" }
