[package]
name = "admin_tenants_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
chrono = "*"
sqlx = { version = "*", features = ["postgres", "uuid"] }

uuid = { version = "*", features = ["v4"] }

# projects
database_provider = { path = "../database_provider" }
admin_tenants = { path = "../admin_tenants" }


[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }
users_provider = { path = "../users_provider" }
users_provider_postgres = { path = "../users_provider_postgres" }
