[package]
name = "auth_provider_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
sqlx = { version = "*", features = ["postgres", "uuid"] }

uuid = { version = "*", features = ["v4"] }

# projects
database_provider = { path = "../database_provider" }
auth_provider = { path = "../auth_provider" }


[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }
users_provider = { path = "../users_provider" }
users_provider_postgres = { path = "../users_provider_postgres" }