[package]
name = "commons_provider"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "*", features = ["v4"] }
chrono = "*"
serde = "*"



# projects
database_provider = { path = "../database_provider" }



[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }