[package]
name = "commons_provider_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
sqlx = { version = "*", features = ["postgres", "uuid"] }

uuid = { version = "*", features = ["v4"] }

# projects
database_provider = { path = "../database_provider" }
commons_provider = { path = "../commons_provider" }


[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }