[package]
name = "users_provider_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "*"
sqlx = { version = "*", features = ["postgres", "uuid", "chrono"] }

uuid = { version = "*", features = ["v4"] }
chrono = "*"

# projects
database_provider = { path = "../database_provider" }
users_provider  = { path = "../users_provider" }



[dev-dependencies]
tracing-subscriber = "*"
rand = "*"
actix-web = "*"

config = { path = "../config" }
